# amper-b2c

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  README.md  custom.mk  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
amplifier/: asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
apps/api/: admin.py  models.py
apps/cart/: admin.py  apps.py  checkout.py  context_processors.py  models.py  services.py  signals.py  urls.py  views.py
apps/catalog/: admin.py  agent_views.py  apps.py  models.py  urls.py  views.py
apps/connector/: apps.py  models.py  names.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/favourites/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/homepage/: admin.py  apps.py  models.py
apps/live_assisted_sales/: admin.py  apps.py  client.py  context_processors.py  events.py  manifest.py  models.py  tasks.py  test_live_assisted_sales.py  urls.py  views.py
apps/media/: admin.py  apps.py  encryption.py  middleware.py  models.py  signals.py  storage.py  urls.py  views.py
apps/orders/: admin.py  apps.py  emails.py  forms.py  models.py  signals.py  urls.py  views.py
apps/plugins/: admin.py  admin_views.py  apps.py  forms.py  hook_names.py  middleware.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/products/: apps.py
apps/promotions/: admin.py  apps.py  models.py
apps/support/: admin.py  allauth_admin.py  apps.py  context_processors.py  draft_preview_links.py  draft_utils.py  message_storage.py  models.py  urls.py  views.py
apps/users/: adapter.py  admin.py  forms.py  helpers.py  models.py  signals.py  urls.py  views.py
apps/utils/: admin_mixins.py  admin_utils.py  datetime_utils.py  email_backend.py  encryption.py  forms.py  models.py  tasks.py  timezones.py
apps/web/: admin.py  apps.py  context_processors.py  meta.py  models.py  sitemaps.py  storage_backends.py  urls.py  views.py
assets/css/: admin.css  site.css
assets/js/: site.js
deploy/: README.md  b2c.env  docker-compose.yml
docs/plugins/: HOW_TO_ADD_PLUGIN.md
plugins/przelewy24/: config.schema.json  entrypoint.py  manifest.json  migrations.py
plugins/tpay/: config.schema.json  entrypoint.py  manifest.json
scripts/: compile_po_to_mo.py  dev.mjs  dev.sh  generate_dummyjson_seeds.py
static/css/: admin-js.css  admin_category_product.css  admin_favourites_wishlist.css  admin_image_preview.css  admin_product_image_inline.css  cart_line_input.css  fonts.css  live_assisted_sales_admin.css  site-css.css  site-js.css
static/hijack/: hijack.js
static/js/: admin_custom.js  admin_favourites_wishlist.js  banner_admin.js  cart.js  homepage_section_admin.js  live_assisted_sales_admin.js  monaco_editors.js
templates/: 400.html  403.html  404.html  429.html  500.html  error_base.html  terms.html
templates/Cart/: cart_line_input.html  cart_page.html  checkout_page.html  nav_cart_line.html  summary_page.html
templates/account/: account_addresses.html  account_base.html  account_details.html  account_inactive.html  account_orders.html  base.html  confirm_login_code.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  profile.html  request_login_code.html  signup.html  signup_closed.html  verification_sent.html
templates/admin/: app_list.html  base.html  monaco_change_form.html  submit_line.html
templates/favourites/: favourites_page.html  wishlist_detail.html
templates/live_assisted_sales/: tracker.html
templates/orders/: order_summary.html  order_tracking.html  payment_gateway_placeholder.html
templates/socialaccount/: authentication_error.html  connections.html  signup.html
templates/support/: hijack_open_tab.html  hijack_user.html
templates/web/: base.html  dashboard.html  dynamicpage_detail.html  index.html  product_list.html  (+1 more)
(+268 files in other folders)
